[package]
name = "wasm-browser-util"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
fluvio-wasm-timer = "0.2.5"
futures = "0.3.18"
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["console"] }

[features]
